manifests/update-image-tags-kustomize-taskflow/overlays/production/postgres-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskflow-postgres
spec:
  template:
    spec:
      containers:
      - name: postgres
        livenessProbe:
          exec:
            command:
              - pg_isready
              - -U
              - taskflow
              - -d
              - taskflowdb
        readinessProbe:
          exec:
            command:
              - pg_isready
              - -U
              - taskflow
              - -d
              - taskflowdb
